# internal/dto/newsletter.go
@@ -1,17 +1,17 @@
 package dto
 
 type CreateNewsletterReq struct {
-	Name        string `json:"name" validate:"required"`
-	Description string `json:"description"`
-	Picture     string `json:"picture"`
+	Name        string `json:"Name" validate:"required"`
+	Description string `json:"Description"`
+	Picture     string `json:"Picture"`
 }
 
 type NewsletterMessageReq struct {
-	NewsletterJID string `json:"newsletterJid" validate:"required"`
-	Count         int    `json:"count"`
-	BeforeID      int    `json:"beforeId"`
+	NewsletterJID string `json:"NewsletterJid" validate:"required"`
+	Count         int    `json:"Count"`
+	BeforeID      int    `json:"BeforeId"`
 }
 
 type NewsletterSubscribeReq struct {
-	NewsletterJID string `json:"newsletterJid" validate:"required"`
+	NewsletterJID string `json:"NewsletterJid" validate:"required"`
 }
